my-eks-cluster/kubernetes/workloads/httproute/httproute-echo.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: echo-route
  namespace: default
spec:
  parentRefs:
  - name: my-alb-gateway
    sectionName: http
    kind: Gateway
  hostnames:
  - "echo.eks-playground.com"
  rules:
  - backendRefs:
    - name: echo
      port: 80
