my-eks-cluster/kubernetes/workloads/httproute/httproute-nginx.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: nginx-route
  namespace: default
spec:
  parentRefs:
  - name: my-alb-gateway
    sectionName: http
    kind: Gateway
  hostnames:
  - "nginx.eks-playground.com"
  rules:
  - backendRefs:
    - name: nginx
      port: 80
