my-eks-cluster/kubernetes/workloads/httproute/httproute-website.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: website-route
  namespace: default
spec:
  parentRefs:
  - name: my-alb-gateway
    sectionName: http
    kind: Gateway
  hostnames:
  - "www.eks-playground.com"
  rules:
  - backendRefs:
    - name: website
      port: 80
